--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "brain-games",
+  "name": "bg-euhoo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
+  "bin": {
+    "brain-games": "dist/bin/brain-games.js"
+   },
+   "files": [
+    "dist"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
