--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "bg-euhoo",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
+  "description": "ffirst project on Hexlet: brain games",
+    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
@@ -14,7 +13,12 @@
    "files": [
     "dist"
   ],
-  "author": "",
+  "keywords": [
+    "brainGames",
+    "hexlet",
+    "myFirstPackage"
+    ],
+  "author": "Euhoo",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
