--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bg-euhoo",
-  "version": "1.1.1",
+  "version": "1.1.4",
   "description": "ffirst project on Hexlet: brain games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +26,9 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "readline-sync": "^1.4.9"
+  },
+  "dependencies": {
     "readline-sync": "^1.4.9"
   }
 }
