--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bg-euhoo",
-  "version": "1.1.4",
-  "description": "ffirst project on Hexlet: brain games",
+  "version": "1.1.5",
+  "description": "First project on Hexlet: brain games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -26,7 +26,12 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "readline-sync": "^1.4.9"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "readline-sync": "^1.4.9",
+    "eslint-plugin-babel": "^5.3.0"
   },
   "dependencies": {
     "readline-sync": "^1.4.9"
