--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bg-euhoo",
-  "version": "1.1.5",
+  "version": "1.1.7",
   "description": "First project on Hexlet: brain games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -8,9 +8,9 @@
     "prepublishOnly": "npm run build"
   },
   "bin": {
-    "brain-games2": "dist/bin/brain-games.js",
-    "brain-games": "dist/index.js"
-  },
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
+    },
   "files": [
     "dist"
   ],
