--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bg-euhoo",
-  "version": "1.1.7",
+  "version": "1.1.10",
   "description": "First project on Hexlet: brain games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -8,8 +8,7 @@
     "prepublishOnly": "npm run build"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-games": "dist/bin/brain-games.js"
     },
   "files": [
     "dist"
