--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bg-euhoo",
-  "version": "1.4.3",
+  "version": "1.5.1",
   "description": "First project on Hexlet: brain games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
     },
   "files": [
     "dist"
